--- a/public/about.css
+++ b/public/about.css
@@ -4,19 +4,18 @@
     width: 100%;
     height:100%;
     min-height:450px;
-    padding-top:20px;
+    padding-top:10px;
     margin-top: 100px;  
-    margin-bottom:10px; 
+    margin-bottom:5px; 
     background-color: rgb(245, 241, 241);
 }
 
 .about-content{
-    width: 80%;
-    height:450px;
-    margin: 2px auto;
-    text-align: left;
+    width: 70%;
+    height:100%;
+    margin: 5px auto;
     box-shadow: 2px 2px 20px 8px rgba(0,0,0,0.1);
-    padding:10px;
+    padding:7px;
     border-radius:4px;
     background-color: rgb(255, 250, 250);
 }
@@ -25,7 +24,10 @@
     font-size: 9pt;
     padding: 10px;
     text-align: justify; 
-    line-height: 1.4em; 
+    width:70%;
+    margin:10px auto;
+    width:70%;
+    margin:10px auto;
     
 }
 
@@ -48,7 +50,7 @@
         
         .about-content{
             width: 80%;
-            height:600px;
+            height:520px;
             margin: 2px auto;
             text-align: left;
             padding:20px;
@@ -60,7 +62,8 @@
             font-size: 13pt;
             padding: 10px;
             text-align: justify; 
-            line-height: 1.4em; 
+            width:70%;
+            margin:10px auto;
         }
         
         .about-container h2 {
@@ -77,31 +80,23 @@
                 width: 100%;
                 height:100%;
                 min-height:800px;
-                padding-top:15px;
                 margin-top: 140px;   
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: cover; 
+                background-color: rgb(245, 241, 241);
             }
             
             .about-content{
-                width: 60%;
-                min-height:100%;
-                height:600px;
+                width: 70%;
+                height:100%;
+                min-height:600px;
                 margin: 100px auto;
-                text-align: left;
-                margin-top: 100px;   
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: cover;
-                
-                padding:7px;
-                border-radius:4px;
+                margin-top: 50px;   
+                padding: 20px;
             }
              
             .about-container p {
                 font-size: 14pt;
-                padding: 10px;
+                width:70%;
+                margin:10px auto;
                 text-align: justify;
             }
             
