--- a/public/contact.css
+++ b/public/contact.css
@@ -3,19 +3,21 @@
 .contact-page{
     width:100%;
     height: 100%;
-    margin-top: 130px;
-    min-height: 590px;
+    margin-top: 150px;
+    min-height: 500px;
 }
 
 .contact-content{
-    width:90%;
+    width:80%;
     margin: 10px auto;
     box-shadow: 2px 2px 20px 8px rgba(0,0,0,0.1);
-    padding:10px;
+    padding:18px;
+
 }
 
 .contact-pane{
     margin-bottom: 10px;
+    padding:18px;
 }
 
 .right{
@@ -31,49 +33,17 @@
     .contact-page{
         width:100%;
         height: 100%;
-        margin-top: 130px;
+        margin-top: 170px;
     }
     
 }
 
-/* Desktop and Bigger Screens 
+/*Desktop and Bigger Screens */
 @media only screen and (min-width:1366px){
     .contact-page{
         width:100%;
         height: 100%;
         margin-top: 200px;
-    }
+    }}
     
-    .contact-content{
-        width:80%;
-        margin: 15px auto;
-    }
-    
-    .contact-pane{
-        display:flex;
-        justify-content: space-evenly;
-        margin-bottom: 100px;
-    }
-    
-    .left{
-        width: 40%;
-        padding: 15px;
-    }
-    .right{
-        width: 30%;
-        height:100%;
-        display:flex;
-        flex-direction:column;
-        justify-content: space-evenly;
-        padding: 10px;
-        box-shadow: 2px 2px 20px 8px rgba(0,0,0,0.1);
-        border-radius: 3px;
-    }
-    
-    .right >*{
-        margin: 8px 0;
-    }
-    
-    .left dl{
-        margin-top: 40px;
-    }*/
+   
