--- a/public/course.css
+++ b/public/course.css
@@ -29,7 +29,7 @@ h3{
 .course-container .enrol{
     width: 100%;
     margin: 10px auto;
-    color:rgb(49, 1, 1); 
+    color:#464646;
 }
 
 .course-container .enrol:hover{
@@ -64,7 +64,7 @@ h3{
     .course-container .enrol{
         width: 100%;
         margin: 10px auto;
-        color:rgb(49, 1, 1); 
+        color:rgb#464646;
     }
     
     .course-container .enrol:hover{
@@ -78,12 +78,13 @@ h3{
 /* Desktop and Bigger Screens */
 @media only screen and (min-width:1366px){
     .course-container{
-        width: 100%;
+        width: 80%;
         height:100%;
         min-height:1300px;
         margin: 100px auto;
         text-align: left;
         margin-top: 200px; 
+        box-shadow:none;
     }
     
     dt{
@@ -98,14 +99,14 @@ h3{
        
         margin: 10px auto;
         padding: 20px;
-        width: 100%;
+        width: 80%;
         
     }
     
     .course-container .enrol{
        
         margin: 15px auto;
-        color:rgb(49, 1, 1);  
+        color:#464646; 
     }
     
     .course-container .enrol:hover{
